--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">
-                Eleve a análise de dados do seu negócio a outro nível <strong class="titulo-destaque"> com relatórios de
-                    qualidade!</strong></h1>
+                Eleve a excelência dos seus processos de análise de dados <strong class="titulo-destaque">
+                     com relatórios de qualidade, impulsionando o sucesso!</strong></h1>
             <p class="apresentacao__conteudo_paragrafo">
-                Olá! Meu nome é Julio Kato e sou desenvolvedor de BI. Meu
-                objetivo é ajudar empresas a colocar em prática
-                suas boas ideias. Gostaria de conversar sobre como posso ajudar o seu negócio? </p>
+                Olá, meu nome é Julio Kato. Meu objetivo é oferecer suporte às empresas na implementação de suas ideias inovadoras. Ficarei muito satisfeito em discutir como posso contribuir para o crescimento do seu negócio. Podemos agendar uma conversa para explorar as possibilidades juntos? </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/midnightmidnight">
